ws-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-service-svc
  namespace: ws-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: "ws-service"
  type: ClusterIP
